# JNIProject

./: README.md  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/jniproject/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/example/jniproject/: EnumTest.java  EnumWrapper.java  JNI.java  MainActivity.java  Quote.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/example/jniproject/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
